# ticket-triage-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
data/: triage_results.json
src/triage_agent/: logging_config.py  routing.py  schemas.py  triage.py
src/triage_agent/agent/: llm.py  orchestrator.py  prompts.py
src/triage_agent/agent/tools/: missing_info.py  topic.py  urgency.py
src/triage_agent/data/: constants.py  loader.py  prepare.py  preprocess.py  sampling.py
src/triage_agent/evaluation/: ground_truth.py  inspect_labels.py  run_eval.py
src/triage_agent/ui/: __init__.py  cli.py  example_tickets.py  home.py
src/triage_agent/ui/components/: __init__.py  eval_rendering.py  triage_rendering.py
src/triage_agent/ui/pages/: 1_Triage_demo.py  2_Evaluation_dashboard.py  3_Data_statistics.py
tests/: test_ground_truth.py  test_integration.py  test_loader.py  test_orchestrator.py  test_routing.py  test_run_eval.py  test_urgency_signals.py
