[project]
name = "triage-agent"
version = "0.1.0"
description = "Insurance support ticket triage agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pandas>=2.0",
    "kagglehub>=0.3",
    "typer>=0.12",
    "pyarrow>=15.0",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "ollama>=0.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
ui = [
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.scripts]
prepare-data = "triage_agent.data.prepare:main"
triage = "triage_agent.triage:main"
triage-eval = "triage_agent.evaluation.run_eval:main"
triage-ui = "triage_agent.ui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage_agent"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
